syntax="proto3";

package storehouse_supplier_service;
option go_package="genproto/storehouse_supplier_service";

import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";

service CashierRequestService {
    rpc CreateCashierRequest(CreateCashierRequestRequest) returns (CashierRequest) {}
    rpc GetByIDCashierRequest(CashierRequestPrimaryKey) returns (CashierRequest) {}
    rpc GetListCashierRequest(GetListCashierRequestRequest) returns (GetListCashierRequestResponse) {}
    rpc UpdateCashierRequest(UpdateCashierRequestRequest) returns (CashierRequest) {}
    rpc UpdatePatchCashierRequest(UpdatePatchCashierRequestRequest) returns (CashierRequest) {}
    rpc DeleteCashierRequest(CashierRequestPrimaryKey) returns (google.protobuf.Empty) {}
}

message CashierRequestPrimaryKey {
    string id = 1;
}

message CashierRequest {
    string id = 1;
    string cashier_request_number = 2;
    string term_payment = 3;
    string term_amount = 4;
    string currency = 5;
    string description = 6;
    string file = 7;
    string supplier_id = 8;
    string created_at = 9;
    string updated_at = 10;
}

message CreateCashierRequestRequest {
    string cashier_request_number = 1;
    string term_payment = 2;
    string term_amount = 3;
    string currency = 4;
    string description = 5;
    string file = 6;
    string supplier_id = 7;
}

message UpdateCashierRequestRequest {
    string id = 1;
    string cashier_request_number = 2;
    string term_payment = 3;
    string term_amount = 4;
    string currency = 5;
    string description = 6;
    string file = 7;
    string supplier_id = 8;
}

message UpdatePatchCashierRequestRequest {
    string id = 1;
    google.protobuf.Struct fields = 2;
}

message GetListCashierRequestRequest {
    int32 limit = 1;
    int32 page = 2;
    string search = 3;
    string where_query = 4;
    google.protobuf.Struct filters = 5;
}

message GetListCashierRequestResponse {
    int32 count = 1;
    repeated CashierRequest cashier_requests = 2;
}
